--- a/applied-modern-cxx-00.html
+++ b/applied-modern-cxx-00.html
@@ -101,14 +101,27 @@ function countdown_timer(datetime, element_id) {
 objects</a></li>
 <li><a href="applied-modern-cxx-04.html">Conversions</a></li>
 <li><a href="applied-modern-cxx-05.html">Functions</a></li>
+<li><a href="applied-modern-cxx-06.html">Series Project</a></li>
+<li><div class="fixed-table">
+<div class="table-row-group">
+<div class="table-row">
+<div class="table-cell">
+Lexical analysis
+</div>
+<div id="lexical-analysis" class="table-cell">
+<script>countdown_timer("2023-04-10 08:00+0000", "lexical-analysis");</script>
+</div>
+</div>
+</div>
+</div></li>
 <li><div class="fixed-table">
 <div class="table-row-group">
 <div class="table-row">
 <div class="table-cell">
 User-defined types and scope
 </div>
-<div id="6" class="table-cell">
-<script>countdown_timer("2023-03-27 08:00+0000",  "6");</script>
+<div id="user-defined-types" class="table-cell">
+<script>countdown_timer("2023-05-01 08:00+0000", "user-defined-types");</script>
 </div>
 </div>
 </div>
@@ -119,20 +132,8 @@ User-defined types and scope
 <div class="table-cell">
 Control flow
 </div>
-<div id="7" class="table-cell">
-<script>countdown_timer("2023-04-17 08:00+0000",  "7");</script>
-</div>
-</div>
-</div>
-</div></li>
-<li><div class="fixed-table">
-<div class="table-row-group">
-<div class="table-row">
-<div class="table-cell">
-Problem solving with algorithms
-</div>
-<div id="8" class="table-cell">
-<script>countdown_timer("2023-05-08 08:00+0000",  "8");</script>
+<div id="control-flow" class="table-cell">
+<script>countdown_timer("2023-05-22 08:00+0000", "control-flow");</script>
 </div>
 </div>
 </div>
@@ -143,8 +144,8 @@ Problem solving with algorithms
 <div class="table-cell">
 Error handling
 </div>
-<div id="9" class="table-cell">
-<script>countdown_timer("2023-05-29 08:00+0000",  "9");</script>
+<div id="error-handling" class="table-cell">
+<script>countdown_timer("2023-06-12 08:00+0000", "error-handling");</script>
 </div>
 </div>
 </div>
@@ -155,8 +156,8 @@ Error handling
 <div class="table-cell">
 Simple I/O
 </div>
-<div id="10" class="table-cell">
-<script>countdown_timer("2023-06-19 08:00+0000", "10");</script>
+<div id="simple-io" class="table-cell">
+<script>countdown_timer("2023-07-03 08:00+0000", "simple-io");</script>
 </div>
 </div>
 </div>
@@ -167,8 +168,20 @@ Simple I/O
 <div class="table-cell">
 Data transformations
 </div>
-<div id="11" class="table-cell">
-<script>countdown_timer("2023-07-10 08:00+0000", "11");</script>
+<div id="data-transformations" class="table-cell">
+<script>countdown_timer("2023-07-24 08:00+0000", "data-transformations");</script>
+</div>
+</div>
+</div>
+</div></li>
+<li><div class="fixed-table">
+<div class="table-row-group">
+<div class="table-row">
+<div class="table-cell">
+Moving to a local toolchain
+</div>
+<div id="local-toolchain" class="table-cell">
+<script>countdown_timer("2023-08-14 08:00+0000", "local-toolchain");</script>
 </div>
 </div>
 </div>
@@ -176,17 +189,61 @@ Data transformations
 </ol>
 <h3 id="module-2-using-library-abstractions">Module 2: Using library
 abstractions</h3>
-<ol start="12" type="1">
-<li>Moving to a local toolchain</li>
-<li>More containers</li>
-<li>Date and time</li>
-<li>Input and output</li>
+<ol start="14" type="1">
+<li><div class="fixed-table">
+<div class="table-row-group">
+<div class="table-row">
+<div class="table-cell">
+Problem solving with algorithms
+</div>
+<div id="algorithms" class="table-cell">
+<script>countdown_timer("2023-09-04 08:00+0000", "algorithms");</script>
+</div>
+</div>
+</div>
+</div></li>
+<li><div class="fixed-table">
+<div class="table-row-group">
+<div class="table-row">
+<div class="table-cell">
+More containers
+</div>
+<div id="containers" class="table-cell">
+<script>countdown_timer("2023-09-25 08:00+0000", "containers");</script>
+</div>
+</div>
+</div>
+</div></li>
+<li><div class="fixed-table">
+<div class="table-row-group">
+<div class="table-row">
+<div class="table-cell">
+Date and time
+</div>
+<div id="datetime" class="table-cell">
+<script>countdown_timer("2023-10-16 08:00+0000", "datetime");</script>
+</div>
+</div>
+</div>
+</div></li>
+<li><div class="fixed-table">
+<div class="table-row-group">
+<div class="table-row">
+<div class="table-cell">
+Input and output
+</div>
+<div id="input-output" class="table-cell">
+(expected release: December)
+</div>
+</div>
+</div>
+</div></li>
 </ol>
 <h2 id="section-2-synthesising-abstractions">Section 2: Synthesising
 abstractions</h2>
 <h3 id="module-3-dipping-your-toe-in-making-simple-abstractions">Module
 3: Dipping your toe in: making simple abstractions</h3>
-<ol start="16" type="1">
+<ol start="18" type="1">
 <li>Classes</li>
 <li>Dynamic dispatch</li>
 <li>Type parameterisation</li>
@@ -194,7 +251,8 @@ abstractions</h2>
 </ol>
 <h3 id="module-4-exposing-the-magic-intermediate-abstractions">Module 4:
 Exposing the magic: intermediate abstractions</h3>
-<ol start="20" type="1">
+<ol start="22" type="1">
+<li>Learning more about the C++ toolchain</li>
 <li>Resources and exceptions</li>
 <li>Initialisation</li>
 <li>Template specialisations</li>
